--- a/config.example.ini
+++ b/config.example.ini
@@ -1,16 +1,16 @@
 # Required settings
 # -----------------
-token = REPLACE_WITH_TOKEN
-mainServerId = REPLACE_WITH_MAIN_SERVER_ID
-inboxServerId = REPLACE_WITH_INBOX_SERVER_ID
-logChannelId = REPLACE_WITH_LOG_CHANNEL_ID
+token = NzYxMDYyMTkzMzUyNTQwMTcw.X3VIZg.24D12BVW77Ey0gYHpOM_bfGgyfU
+mainServerId = 746974431141953616
+inboxServerId = 779192146242043914
+logChannelId = 795274353632870440
 
 # Common settings
 # ----------------------------------
 prefix = !
 inboxServerPermission = manageMessages
-status = Message me for help!
-responseMessage = Thank you for your message! Our mod team will reply to you here as soon as possible.
+status = DM me for any help!
+responseMessage = Thank you for your message! Our mutant army mod team will reply to you here as soon as possible.
 
 # Add new options below this line:
 # ----------------------------------
